ER9x changelog
Please insert a short description of a change by inserting it below this header and 
above the previous change.

Format is as follows:
******************************************
CHANGELOG: 1-11-2011
description here
====================================================================================

******************************************
CHANGELOG: 13-11-2011 MPB
Audio array loop fix

******************************************
CHANGELOG: 13-11-2011 MPB
hline and vline memory protection changes


******************************************
CHANGELOG: 13-11-2011 MPB
Fix Curve draw bug caused by fixing EXPO graph


******************************************
CHANGELOG: 13-11-2011 MPB
Fix memory corruption occuring in EXPO graph menu


******************************************
CHANGELOG: 09-11-2011 MPB
Add Amps option to FrSky telemetry A1 and A2.
Add zero function to Amps display.
Clear existing mixes when using simple 4 chan template
Fix delay problem
Fix Reversed throttle with throttle trim bug
Fix getswitch() bug when using !SWn
Change getswitch() to use previous result when recursing deeply

******************************************
CHANGELOG: 03-11-2011
1) update to er9x-builder.sh


******************************************
CHANGELOG: 3-11-2011
1) Moved pulse generation to pulses.cpp and added header file
2) Added support for DSM2


******************************************
CHANGELOG: 02-11-2011
1) adding new script called 'er9x-builder.sh' to root folder.
   script cleans up the compile process of all the versions
   and should be easier to extend in the future.
   all 'compile' output ends up in the buildlog folder
   and is only shown if the compile failed.
2) added pulses file and header, added DSM2 support



******************************************
CHANGELOG: 1-11-2011
1) Added changelog file
2) removed -speaker versions from repo
3) removed -speaker compile options from the domake script




