@@ -10,6 +10,10 @@ description here
 ====================================================================================
 
 ******************************************
+CHANGELOG: 14-11-2011 RFT
+Audio array loop change to save cpu cycle
+
+******************************************
 CHANGELOG: 13-11-2011 MPB
 Audio array loop fix
 
